exports[`test Conditional button states 1`] = `
"<form class=\"pe-dialog-pane\" name=\"demo\" type=\"post\" enctype=
\"multipart/form-data\" id=\"demo\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__header\">
      <div class=\"pe-dialog-pane__title\">
        Select a file...
      </div>
    </div>
    <div class=\"pe-dialog-pane__body\">
      <input type=\"file\" id=\"file\" name=\"file\">
    </div>
    <div class=\"pe-dialog-pane__footer\">
      <div class=\"pe-dialog-pane__actions\">
        <a class=\"pe-button pe-text-button\" tabindex=\"0\">
        <div class=\"pe-button__content\">
          <div class=\"pe-ripple pe-ripple--constrained\"></div>
          <div class=\"pe-button__wash\"></div>
          <div class=\"pe-button__focus\"></div>
          <div class=\"pe-button__label\">
            Cancel
          </div>
        </div></a><button type=\"submit\" class=
        \"pe-button pe-text-button pe-button--disabled\" tabindex=
        \"-1\" disabled>
        <div class=\"pe-button__content\">
          <div class=\"pe-button__label\">
            Post
          </div>
        </div></button>
      </div>
    </div>
  </div>
</form>
"
`;

exports[`test No options - spec 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\"></div>
  </div>
</form>
"
`;

exports[`test Option: body - spec 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\">
      Hello
    </div>
  </div>
</form>
"
`;

exports[`test Option: body 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\">
      Hello
    </div>
  </div>
</form>
"
`;

exports[`test Option: class - spec 1`] = `
"<form class=\"pe-dialog-pane class-x\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\"></div>
  </div>
</form>
"
`;

exports[`test Option: className - spec 1`] = `
"<form class=\"pe-dialog-pane className-x\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\"></div>
  </div>
</form>
"
`;

exports[`test Option: element - spec 1`] = `
"<a class=\"pe-dialog-pane\">
<div class=\"pe-dialog-pane__content\">
  <div class=\"pe-dialog-pane__body\"></div>
</div></a>
"
`;

exports[`test Option: id - spec 1`] = `
"<form id=\"id-x\" class=\"pe-dialog-pane\" name=\"id-x\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\"></div>
  </div>
</form>
"
`;

exports[`test Option: style - spec 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\" style=
  \"background: rgb(255, 245, 157);\">
    <div class=\"pe-dialog-pane__body\">
      Hello
    </div>
  </div>
</form>
"
`;

exports[`test Option: style 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\" style=
  \"background: rgb(255, 245, 157);\">
    <div class=\"pe-dialog-pane__body\">
      Hello
    </div>
  </div>
</form>
"
`;

exports[`test Option: title and body (long text) - spec 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__header\">
      <div class=\"pe-dialog-pane__title\">
        Long dialog with a very long title that surely won\'t fit
        here
      </div>
    </div>
    <div class=\"pe-dialog-pane__body\">
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
    </div>
  </div>
</form>
"
`;

exports[`test Option: title and body (long text) - spec 2`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__header\">
      <div class=\"pe-dialog-pane__title\">
        Long dialog with a very long title that surely won\'t fit
        here
      </div>
    </div>
    <div class=\"pe-dialog-pane__body\">
      Hello
    </div>
    <div class=\"pe-dialog-pane__footer\">
      <div class=\"pe-dialog-pane__actions\">
        <a class=\"pe-button pe-text-button\" tabindex=\"0\">
        <div class=\"pe-button__content\">
          <div class=\"pe-ripple pe-ripple--constrained\"></div>
          <div class=\"pe-button__wash\"></div>
          <div class=\"pe-button__focus\"></div>
          <div class=\"pe-button__label\">
            Cancel
          </div>
        </div></a><a class=\"pe-button pe-text-button\" tabindex=\"0\">
        <div class=\"pe-button__content\">
          <div class=\"pe-ripple pe-ripple--constrained\"></div>
          <div class=\"pe-button__wash\"></div>
          <div class=\"pe-button__focus\"></div>
          <div class=\"pe-button__label\">
            Save
          </div>
        </div></a>
      </div>
    </div>
  </div>
</form>
"
`;

exports[`test Option: title, body, footer 1`] = `
"<form class=\"pe-dialog-pane\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__header\">
      <div class=\"pe-dialog-pane__title\">
        Long dialog with a very long title that surely won\'t fit
        here
      </div>
    </div>
    <div class=\"pe-dialog-pane__body\">
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
      <p>
        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna
        aliqua. Ut enim ad minim veniam, quis nostrud exercitation
        ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
      </p>
    </div>
    <div class=\"pe-dialog-pane__footer\">
      <div class=\"pe-dialog-pane__actions\">
        <a class=\"pe-button pe-text-button\" tabindex=\"0\">
        <div class=\"pe-button__content\">
          <div class=\"pe-ripple pe-ripple--constrained\"></div>
          <div class=\"pe-button__wash\"></div>
          <div class=\"pe-button__focus\"></div>
          <div class=\"pe-button__label\">
            Cancel
          </div>
        </div></a><a class=\"pe-button pe-text-button\" tabindex=\"0\">
        <div class=\"pe-button__content\">
          <div class=\"pe-ripple pe-ripple--constrained\"></div>
          <div class=\"pe-button__wash\"></div>
          <div class=\"pe-button__focus\"></div>
          <div class=\"pe-button__label\">
            Save
          </div>
        </div></a>
      </div>
    </div>
  </div>
</form>
"
`;

exports[`test Themed (color and border radius) - spec 1`] = `
"<form class=\"pe-dialog-pane dialog-tests-blue-dialog\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\">
      <div>
        Hello
      </div>
    </div>
  </div>
</form>
"
`;

exports[`test Themed (color) 1`] = `
"<form class=\"pe-dialog-pane dialog-pane-tests-blue-dialog\">
  <div class=\"pe-dialog-pane__content\">
    <div class=\"pe-dialog-pane__body\">
      <div>
        Hello
      </div>
    </div>
  </div>
</form>
"
`;
